Corrections to W7 blog, amendments to quote block size on mobile screen sizes

--- a/css/callum_anderson.css
+++ b/css/callum_anderson.css
@@ -188,3 +188,8 @@ q:after, q:before {
  footer img {
    margin: 0 auto;
  }
+ @media only screen and (max-width: 767px) {
+   q {
+     font-size: 4vw;
+   }
+ }
